k8s/django/django-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: default
spec:
  selector:
    app: django-app
  ports:
  - port: 8000
    targetPort: 8000
